group 'com.sf_lolitahag'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'application'

defaultTasks 'clean', 'build'

sourceCompatibility = 1.8
targetCompatibility = 1.8
version = "1.0"

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'org.ehcache', name: 'ehcache', version: '3.1.3'
    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.7'
    testCompile group: 'junit', name: 'junit', version: '4.11'
}

mainClassName = 'com.sf_lolitahag.Main'

jar {
    from {
        configurations.compile.collect {
            it.isDirectory() ? it : zipTree(it)
        }
        configurations.runtime.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
    manifest {
        attributes 'Main-Class': mainClassName
    }
}
